<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/edit_totalPago"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_totalPago"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_precoLitro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_precoCombustivel"
        android:inputType="numberDecimal"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_totalPago"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_qtdLitros"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_qtdAbastecido"
        android:inputType="numberDecimal"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_precoLitro"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_kmAtual"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_kmAtual"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_qtdLitros"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_tipoCombustivel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_tipoCombustivel"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_kmAtual"
        android:importantForAutofill="no" />

    <Switch
        android:id="@+id/swt_tipoCombustivel"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textColor="@color/corAzul"
        android:textOff="Gasolina"
        android:textOn="Alcool"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_tipoCombustivel"
        app:layout_constraintStart_toEndOf="@+id/edit_tipoCombustivel"
        app:layout_constraintTop_toTopOf="@+id/edit_tipoCombustivel" />

    <EditText
        android:id="@+id/edit_gpsPosto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_gpsPosto"
        android:inputType="text"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_tipoCombustivel"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_getGps"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_corner_gpsbutton"
        android:elevation="10dp"
        android:text="GPS"
        app:layout_constraintBottom_toBottomOf="@+id/edit_gpsPosto"
        app:layout_constraintStart_toEndOf="@+id/edit_gpsPosto"
        app:layout_constraintTop_toBottomOf="@+id/edit_tipoCombustivel" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button"
        android:elevation="10dp"
        android:text="@string/button_save"
        android:textColor="@color/corBranca"
        android:textColorHighlight="@color/corBranca"
        android:textColorHint="@color/corBranca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_gpsPosto" />

</androidx.constraintlayout.widget.ConstraintLayout>